cabal-version:      3.0
name:               hirchive
version:            0.1.0.0
license:            MIT
author:             jott8
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

executable hirchive
    import:           warnings
    main-is:          Main.hs
    build-depends:    
        base      ^>=4.16.4.0,
        hsexif    ^>=0.6.1.10,
        directory ^>=1.3.7.1,
        time      ^>=1.11.1.1,
        filepath  ^>=1.5.2.0,
    hs-source-dirs:   app
    default-language: Haskell2010
