cabal-version:      3.0
name:               hirchive
version:            0.1.0.0
license:            MIT
author:             jott8
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

executable hirchive
    import:           warnings
    main-is:          Main.hs
    build-depends:    
        base      ^>=4.16.4.0,
        exiftool  ^>=0.2.0.5,
        directory ^>=1.3.7.1,
        filepath  ^>=1.5.2.0,
        text      ^>=2.1.1,
    hs-source-dirs:   app
    default-language: Haskell2010
